@@ -23,24 +23,63 @@
  *                                                                            *
  ******************************************************************************/
 
-package org.datacrow.client.console.components;
+package org.datacrow.client.console.components.lists.elements;
 
-import javax.swing.JComponent;
+import java.awt.Dimension;
+import java.awt.FlowLayout;
 
-/**
- * @author RJ
- */
-public class DcAttachmentField extends JComponent {
-	
-	public DcAttachmentField() {
-		build();
+import javax.swing.JLabel;
+
+import org.datacrow.client.console.ComponentFactory;
+import org.datacrow.core.attachments.Attachment;
+
+public class DcAttachmentListElement extends DcListElement {
+    
+    private static final FlowLayout layout = new FlowLayout(FlowLayout.LEFT);
+    private static final Dimension dim = new Dimension(360, 30);
+    private static final Dimension dimLabel = new Dimension(360, 30);
+    
+    private Attachment attachment;
+    
+    public DcAttachmentListElement(Attachment attachment) {
+        this.attachment = attachment;
+        
+        setPreferredSize(dim);
+        setMinimumSize(dim);
+        
+        build();
+    }
+
+    public Attachment getAttachment() {
+        return attachment;
+    }
+    
+    @Override
+    public void build() {
+        setLayout(layout);
+        JLabel labelField = ComponentFactory.getLabel(attachment.getName());
+        labelField.setPreferredSize(dimLabel);
+
+        add(labelField);
+    }
+
+	@Override
+	protected void finalize() throws Throwable {
+		super.finalize();
+		attachment = null;
 	}
-	
-	private void load() {
-		// make sure to use server side code
-	}
-	
-	private void build() {
-		
-	}
+
+    @Override
+    public int hashCode() {
+        return attachment.getStorageFile().hashCode();
+    }
+
+    @Override
+    public boolean equals(Object obj) {
+        if (obj instanceof DcAttachmentListElement) {
+            Attachment attachment2 = ((DcAttachmentListElement) obj).getAttachment();
+            return attachment2 != null && attachment2.equals(attachment);
+        }
+        return false;
+    }
 }
