@@ -1,3 +1,4 @@
+lblAttachments = Attachments
 lblUIScaling = UI Scaling
 lblComicVineQueryEnemiesAndFriends = Query friends & enemies (slow)
 lblComicVineQueryEnemiesAndFriendsHelp = Allow the online search to include friends and enemies information. This will slow the search significantly.
