@@ -5,6 +5,13 @@ Data Crow version 4.9.2                       Released on 2023-07-xx
 [Changed]
 - Data Crow will no longer close windows or exit when pressing the escape key. This has been changed to CTRL/COMMAND+ESC.
 
+[New]
+- Attachments can now be added to items. These documents are stored within the Data Crow data set.
+
+TODO:
+- Attachments: security
+- Attachments: max size (1, 2, 5, 10 MB)
+
 
 --------------------------------------------------------------------
 Data Crow version 4.9.1                       Released on 2023-06-08
